# ALSEdu

./: .gitignore  CMakeLists.txt  README.md
classifiers/AdaBoost/: adaboost.xml  adaboost_decision_likelihoods.txt  classifier.yaml  plot_adaboost_decision_likelihoods.gpt
classifiers/MAE/: classifier.yaml  false_negative_maes.txt  false_positive_maes.txt  mae_decision_likelihoods.txt  negative_maes.txt  plot_histograms.gpt  plot_mae_decision_likelihoods_positive.gpt  positive_maes.txt  true_negative_maes.txt  true_positive_maes.txt
classifiers/MLP/: classifier.yaml  mlp.xml  mlp_decision_likelihoods.txt  negative_predicts.txt  plot_histograms.gpt  plot_mlp_decision_likelihoods.gpt  positive_predicts.txt
datasets/residual_errors/garage/test/: failure_poses.txt  failure_residual_errors.txt  gt_poses.txt  scans.txt  success_poses.txt  success_residual_errors.txt
datasets/residual_errors/garage/train/: failure_poses.txt  failure_residual_errors.txt  gt_poses.txt  scans.txt  success_poses.txt  success_residual_errors.txt
datasets/residual_errors/nic1f/test/: failure_poses.txt  failure_residual_errors.txt  gt_poses.txt  scans.txt  success_poses.txt  success_residual_errors.txt
datasets/residual_errors/nic1f/train/: failure_poses.txt  failure_residual_errors.txt  gt_poses.txt  scans.txt  success_poses.txt  success_residual_errors.txt
include/: AdaBoostClassifier.h  E2EFusion.h  Histogram.h  MAEClassifier.h  MCL.h  MCLRE.h  MLPClassifier.h  MRFFailureDetector.h  Particle.h  Pose.h  REsDatasetParser.h  RobotSim.h  Scan.h
maps/garage/: mcl_map.pgm  ogm.pgm  ogm.yaml
maps/nic1f/: mcl_map.pgm  mcl_map.yaml  ogm.pgm
src/: ALSTest.cpp  AdaBoostClassifierLearning.cpp  E2EFusion.cpp  FailureDetection.cpp  MAEClassifierLearning.cpp  MCL.cpp  MCLRE.cpp  MLPClassifierLearning.cpp  REsDatasetGeneration.cpp  RobotSim.cpp
